--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netflix-react-js",
+  "name": "netflix-react",
   "version": "0.1.0",
   "homepage": "https://fireclint.github.io/netflix-react-tailwind/",
   "private": true,
@@ -20,8 +20,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,12 +36,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
